<resources>
    <string name="app_name">KuliaoJK_KTX</string>
    <string name="skip">跳过</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_main">首页</string>
    <string name="sort_main">分类</string>
    <string name="cart_main">购物车</string>
    <string name="my_main">我的</string>

    <string name="login_status_none">未登陆</string>
    <string name="avatar">TODO</string>
    <string name="title_bg">TODO</string>
    <string name="order">我的订单</string>
    <string name="order_all">全部</string>
    <string name="order_status_paying">待付款</string>
    <string name="order_status_shipping">待发货</string>
    <string name="order_status_receipting">待收货</string>
    <string name="order_status_receipted">已收货</string>
    <string name="personal_address_manager">地址管理</string>
    <string name="about">关于</string>
    <string name="personal_about">关于监康穿戴</string>
    <string name="personal_logout">退出账号</string>

    <string name="login">登录</string>
    <string name="login_title">酷聊账号登录</string>
    <string name="login_username_hint">请输入酷聊账号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_info_null">用户名或者密码未填写</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="recover_password_succeed">找回密码成功</string>
    <string name="recover_password">找回密码</string>

    <string name="logout_pop_title">确认退出登录？</string>
    <string name="logout_pop_confirm">确认</string>
    <string name="cancel">取消</string>
</resources>
