<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.kuliao.kuliaojk.vm.UserViewModel" />
    </data>

    <com.kuliao.kuliaojk.weight.SwipeRefreshView
        android:id="@+id/refresh_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary_gray_F5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/title_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/personal_title_bg"
                android:contentDescription="@string/title_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_12"
                android:contentDescription="@string/avatar"
                android:src="@drawable/default_avatar"
                app:layout_constraintBottom_toBottomOf="@id/title_bg"
                app:layout_constraintRight_toLeftOf="@id/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_14"
                android:text="@string/login_status_none"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@id/title_bg"
                app:layout_constraintLeft_toRightOf="@id/ivAvatar"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/order_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_12"
                android:background="@drawable/bg_solid_ff_radius_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAvatar">

                <TextView
                    android:id="@+id/tv_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dp_9"
                    android:paddingTop="@dimen/dp_9"
                    android:paddingEnd="@dimen/dp_9"
                    android:text="@string/order"
                    android:textColor="@color/fontPrimary_dark_33"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/all_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/arrow_right_light"
                    android:drawablePadding="@dimen/dp_7"
                    android:padding="@dimen/dp_9"
                    android:text="@string/order_all"
                    android:textColor="@color/fontPrimary_hint"
                    android:textSize="@dimen/sp_13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_06"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/all_tv" />

                <TextView
                    android:id="@+id/wait_pay"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/order_paying"
                    android:drawablePadding="@dimen/dp_12"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/order_status_paying"
                    android:textColor="@color/fontColor_gray_66"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintRight_toLeftOf="@id/wait_delivery"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintWidth_percent="0.25" />

                <TextView
                    android:id="@+id/wait_delivery"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/order_shipping"
                    android:drawablePadding="@dimen/dp_12"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/order_status_shipping"
                    android:textColor="@color/fontColor_gray_66"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintLeft_toRightOf="@id/wait_pay"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintWidth_percent="0.25" />

                <TextView
                    android:id="@+id/wait_goods"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/order_receipting"
                    android:drawablePadding="@dimen/dp_12"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/order_status_receipting"
                    android:textColor="@color/fontColor_gray_66"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintLeft_toRightOf="@id/wait_delivery"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintWidth_percent="0.25" />

                <TextView
                    android:id="@+id/wait_had_goods"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/order_receipted"
                    android:drawablePadding="@dimen/dp_12"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/order_status_receipted"
                    android:textColor="@color/fontColor_gray_66"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintLeft_toRightOf="@id/wait_goods"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintWidth_percent="0.25" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/colorWhite"
                android:paddingStart="@dimen/dp_15"
                android:paddingTop="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/personal_address"
                    android:drawablePadding="@dimen/dp_16"
                    android:gravity="center"
                    android:text="@string/personal_address_manager"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_17"
                    android:src="@drawable/arrow_right_dark" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/colorWhite"
                android:paddingStart="@dimen/dp_15"
                android:paddingTop="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/personal_about"
                    android:drawablePadding="@dimen/dp_16"
                    android:gravity="center"
                    android:text="@string/personal_about"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_17"
                    android:src="@drawable/arrow_right_dark" />
            </RelativeLayout>

            <TextView
                android:id="@+id/logout_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:padding="@dimen/dp_15"
                android:text="@string/personal_logout"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.kuliao.kuliaojk.weight.SwipeRefreshView>
</layout>